# chess-gpu

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: board.wgsl  pieces.wgsl  shader.wgsl  text.wgsl
src/: fen.rs  logic.rs  main.rs  texture.rs  utils.rs
