[package]
name = "chess-gpu"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"
strip = true

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
image = { version = "0.25.8", default-features = false, features = ["png"] }
log = "0.4.28"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.30.12"
